--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,6 @@
         "typeindex": "cpp",
         "valarray": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.clang_format_style": "LLVM"
 }
